# diffSVMC

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  DEPENDENCY-TREE.md  LICENSE  PLAN.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/instructions/: svmc-conservative-porting.instructions.md
.github/workflows/: ci.yml  webr-build.yml
docs/: scan-ownership-plan.md
issues/: jax-js-nonconsuming-leak-jit-scan-optax.md
issues/jax-js-nonconsuming/: 001-eslint-warn-returning-borrowed-parameter.md  002-jit-cache-consts-dangling-after-foriloop-scan-dispose.md  003-traced-jaxpr-constants-leak.md  004-pe-intermediate-leaks-in-nested-grad-hessian-traces.md  005-eager-shared-kernel-carry-bisect.md  007-wasm-shared-memory-deadlock-in-nested-worker.md
issues/svmc/: 001-soil-water-mbe-double-counts-pondsto.md  002-aerodynamics-zn-cap-dead-code.md  003-canopy-water-snow-unload-save-attribute.md  004-soil-water-runoff-save-attribute.md
scripts/: benchmark_integration_compile.py  collect_hourly_logs.py  export_qvidja_demo_data.py  generate_comparison.py  verify_branch_coverage.py
website/: build-webr.sh  comparison.html  index.html  install-webr.sh  package.json  vite.config.ts
website/public/: comparison-qvidja.json
website/src/: qvidja-demo.js  qvidja-jax-core.js  qvidja-jax-worker.js
