[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svmc-jax"
version = "0.0.1"
description = "Differentiable SVMC vegetation process model in JAX"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
  "numpy>=1.24",
  "optax>=0.2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "netCDF4>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/svmc-jax/src/svmc_jax"]

[tool.pytest.ini_options]
testpaths = ["packages/svmc-jax/tests"]
